Completed Logistic Regression for HW2

--- a/hw2/Assignment_02_Exercise.ipynb
+++ b/hw2/Assignment_02_Exercise.ipynb
@@ -7,10 +7,7 @@
       },
       "source": [
         "# ECE 57000 Assignment 2 Exercises\n",
-        "\n",
-        "\n",
-        "\n",
-        "Name:"
+        "Name: Cole Richardson"
       ]
     },
     {
@@ -73,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,7 +78,17 @@
         "id": "I9XT8gbcVnAk",
         "outputId": "57cb38a7-8339-4178-df04-7ecb0d876ce7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The data has a shape of (569, 30), and the target has a shape of (569,)\n",
+            "The training set has 455 datapoints and the test set has 114 datapoints.\n",
+            "The max of training data is 1.00 and the min is 0.00.\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.datasets import load_breast_cancer\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -129,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 95,
       "metadata": {
         "id": "2RaZ2U_WVnAl"
       },
@@ -142,15 +149,16 @@
         "# Sigmoid function for logistic regression\n",
         "def sigmoid(z):\n",
         "    # <Your code>\n",
-        "\n",
+        "    return 1 / (1 + np.exp(-z))\n",
         "    # <end code>\n",
         "\n",
         "# Binary Cross-Entropy Loss\n",
         "def binary_cross_entropy(y_true, y_pred):\n",
         "    # Avoid log(0) by clipping predictions\n",
         "    # <Your code>\n",
-        "    \n",
-        "    \n",
+        "    y_pred = np.clip(y_pred, 1e-10, 1 - 1e-10)\n",
+        "    x0 = y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred)\n",
+        "    return 1 / len(y_true) * -np.sum(x0)   \n",
         "    # <end code>"
       ]
     },
@@ -175,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 96,
       "metadata": {
         "id": "kfTGYGVIWinN"
       },
@@ -186,6 +194,8 @@
         "        self.learning_rate = learning_rate\n",
         "        self.epochs = epochs\n",
         "        self.batch_size = batch_size\n",
+        "        self.weights = None\n",
+        "        self.bias = None\n",
         "\n",
         "    # Initialize weights\n",
         "    def initialize_weights(self, n_features):\n",
@@ -196,16 +206,15 @@
         "        \"\"\"\n",
         "        # <Your code>\n",
         "        # Zero initialization for weights and bias\n",
-        "\n",
-        "\n",
+        "        self.weights = np.zeros(n_features)\n",
+        "        self.bias = 0\n",
         "        # <end code>\n",
         "\n",
         "\n",
         "    # Prediction function\n",
         "    def predict(self, X):\n",
         "        # <Your code>\n",
-        "        \n",
-        "\n",
+        "        return sigmoid(np.matmul(X, self.weights) + self.bias)\n",
         "        # <end code>\n",
         "\n",
         "    # Training function using mini-batch SGD\n",
@@ -232,14 +241,16 @@
         "                # <Your code>\n",
         "\n",
         "                # Predictions                \n",
-        "\n",
+        "                y_pred = self.predict(X_batch)\n",
         "\n",
         "                # Compute gradients\n",
-        "\n",
+        "                scale = 1 / self.batch_size\n",
+        "                dw = scale * np.matmul(y_pred - y_batch, X_batch)\n",
+        "                db = scale * np.sum(y_pred - y_batch)\n",
         "\n",
         "                # Update weights\n",
-        "\n",
-        "\n",
+        "                self.weights -= self.learning_rate * dw\n",
+        "                self.bias -= self.learning_rate * db\n",
         "                # <end code>\n",
         "\n",
         "            # Calculate loss for monitoring\n",
@@ -250,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +269,26 @@
         "id": "iqqADhS7Vj2W",
         "outputId": "ee239825-bcf2-4185-d6ed-a3981c9dcdc4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "SGD loss\n",
+            "Epoch 1/100, Loss: 0.6931\n",
+            "Epoch 10/100, Loss: 0.3550\n",
+            "Epoch 20/100, Loss: 0.2727\n",
+            "Epoch 30/100, Loss: 0.2341\n",
+            "Epoch 40/100, Loss: 0.2106\n",
+            "Epoch 50/100, Loss: 0.1943\n",
+            "Epoch 60/100, Loss: 0.1822\n",
+            "Epoch 70/100, Loss: 0.1726\n",
+            "Epoch 80/100, Loss: 0.1647\n",
+            "Epoch 90/100, Loss: 0.1582\n",
+            "Epoch 100/100, Loss: 0.1525\n"
+          ]
+        }
+      ],
       "source": [
         "# You are encouraged to experiment with different architectures and learning rates to see how they affect the performance of the model.\n",
         "# Training the model\n",
@@ -268,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,7 +306,23 @@
         "id": "CTnF9h3yLUOW",
         "outputId": "0a22cefd-a0d5-4245-a28c-1357bd6aa427"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 0 0 1 1 0 0 0 0 1 1 0 1 0 1 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0\n",
+            " 1 0 1 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 0 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0\n",
+            " 1 1 1 1 1 1 0 1 1 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 1 0 0 1 0 0 1 1 1 0 1 1 0\n",
+            " 1 1 0]\n",
+            "[1 0 0 1 1 0 0 0 1 1 1 0 1 0 1 0 1 1 1 0 0 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0\n",
+            " 1 0 1 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 0 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0\n",
+            " 1 1 1 0 1 1 0 1 0 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 1 0 0 1 0 0 1 1 1 0 1 1 0\n",
+            " 1 1 0]\n",
+            "The accuracy is 0.9649\n"
+          ]
+        }
+      ],
       "source": [
         "# Code to check accuracy of your implementation\n",
         "from sklearn.metrics import accuracy_score\n",
@@ -324,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 89,
       "metadata": {
         "id": "gB2LyOiHYhWY"
       },
@@ -382,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 90,
       "metadata": {
         "id": "Uy8RcFLdVnAn"
       },
@@ -571,7 +617,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.12.5"
     }
   },
   "nbformat": 4,
