Push work in progess.

--- a/hw2/Assignment_02_Exercise.ipynb
+++ b/hw2/Assignment_02_Exercise.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 5,
       "metadata": {
         "id": "2RaZ2U_WVnAl"
       },
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 6,
       "metadata": {
         "id": "kfTGYGVIWinN"
       },
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,9 +276,9 @@
           "text": [
             "SGD loss\n",
             "Epoch 1/100, Loss: 0.6931\n",
-            "Epoch 10/100, Loss: 0.3550\n",
-            "Epoch 20/100, Loss: 0.2727\n",
-            "Epoch 30/100, Loss: 0.2341\n",
+            "Epoch 10/100, Loss: 0.3551\n",
+            "Epoch 20/100, Loss: 0.2728\n",
+            "Epoch 30/100, Loss: 0.2340\n",
             "Epoch 40/100, Loss: 0.2106\n",
             "Epoch 50/100, Loss: 0.1943\n",
             "Epoch 60/100, Loss: 0.1822\n",
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 9,
       "metadata": {
         "id": "gB2LyOiHYhWY"
       },
@@ -379,19 +379,21 @@
         "def relu(z):\n",
         "    \"\"\"ReLU activation function.\"\"\"\n",
         "    # <Your code>\n",
-        "\n",
+        "    return np.maximum(0, z)\n",
         "    # <end code>\n",
         "\n",
         "def relu_derivative(z):\n",
         "    \"\"\"Derivative of ReLU activation function.\"\"\"\n",
         "    # <Your code>\n",
-        "\n",
+        "    # Derivative of ReLU is 1 if z > 0, else 0\n",
+        "    # Just use f'(0) = 0\n",
+        "    return np.where(z > 0, 1, 0)\n",
         "    # <end code>\n",
         "\n",
         "def sigmoid(z):\n",
         "    \"\"\"Sigmoid activation function.\"\"\"\n",
         "    # <Your code>\n",
-        "    \n",
+        "    return 1 / (1 + np.exp(-z))\n",
         "    # <end code>\n"
       ]
     },
@@ -461,13 +463,10 @@
         "\n",
         "        # <Your code>\n",
         "        # Kaiming initialization for the first layer weights\n",
-        "\n",
         "        \n",
         "        # Kaiming initialization for the second layer weights\n",
-        "\n",
         "        \n",
         "        # Kaiming initialization for the third layer weights\n",
-        "\n",
         "        \n",
         "        # <end code>\n",
         "\n",
@@ -480,7 +479,7 @@
         "        \"\"\"\n",
         "        # <Your code>\n",
         "\n",
-        "        \n",
+        "\n",
         "\n",
         "        # <end code>\n",
         "\n",
@@ -617,7 +616,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.5"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
