Completion of HW2

--- a/hw2/Assignment_02_Exercise.ipynb
+++ b/hw2/Assignment_02_Exercise.ipynb
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 617,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 618,
       "metadata": {
         "id": "2RaZ2U_WVnAl"
       },
@@ -158,7 +158,7 @@
         "    # <Your code>\n",
         "    y_pred = np.clip(y_pred, 1e-10, 1 - 1e-10)\n",
         "    x0 = y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred)\n",
-        "    return 1 / len(y_true) * -np.sum(x0)   \n",
+        "    return -1.0 * np.mean(x0)\n",
         "    # <end code>"
       ]
     },
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 619,
       "metadata": {
         "id": "kfTGYGVIWinN"
       },
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 620,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 621,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 622,
       "metadata": {
         "id": "gB2LyOiHYhWY"
       },
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 623,
       "metadata": {
         "id": "Uy8RcFLdVnAn"
       },
@@ -463,13 +463,20 @@
         "\n",
         "        # <Your code>\n",
         "        # Kaiming initialization for the first layer weights\n",
-        "        \n",
-        "        # Kaiming initialization for the second layer weights\n",
-        "        \n",
-        "        # Kaiming initialization for the third layer weights\n",
-        "        \n",
-        "        # <end code>\n",
+        "        self.w1 = np.random.randn(\n",
+        "            self.input_size, self.hidden_size1) * np.sqrt(2 / self.input_size)\n",
+        "        self.b1 = np.zeros([1, self.hidden_size1])\n",
         "\n",
+        "        # Kaiming initialization for the second layer weights\n",
+        "        self.w2 = np.random.randn(\n",
+        "            self.hidden_size1, self.hidden_size2) * np.sqrt(2 / self.hidden_size1)\n",
+        "        self.b2 = np.zeros([1, self.hidden_size2])\n",
+        "\n",
+        "        # Kaiming initialization for the third layer weights\n",
+        "        self.w3 = np.random.randn(\n",
+        "            self.hidden_size2, self.output_size) * np.sqrt(2 / self.hidden_size2)\n",
+        "        self.b3 = np.zeros([1, self.output_size]) \n",
+        "        # <end code>\n",
         "\n",
         "    def forward(self, X):\n",
         "        \"\"\"\n",
@@ -478,9 +485,15 @@
         "        :return: Activated output of the network\n",
         "        \"\"\"\n",
         "        # <Your code>\n",
-        "\n",
-        "\n",
-        "\n",
+        "        # Forward pass through the network\n",
+        "        # First hidden layer\n",
+        "        self.ht1 = np.dot(X, self.w1) + self.b1\n",
+        "        self.h1 = relu(self.ht1)\n",
+        "        self.ht2 = np.dot(self.h1, self.w2) + self.b2\n",
+        "        self.h2 = relu(self.ht2)\n",
+        "        self.ht3 = np.dot(self.h2, self.w3) + self.b3\n",
+        "        result = sigmoid(self.ht3)\n",
+        "        return result\n",
         "        # <end code>\n",
         "\n",
         "    def backward(self, X, y, output):\n",
@@ -493,26 +506,40 @@
         "        m = X.shape[0]\n",
         "\n",
         "        # Gradient of loss w.r.t. output (binary cross-entropy with sigmoid activation)\n",
-        "        dZ3 = output - y[:,None]  # Gradient wrt Z3 when using sigmoid activation at output\n",
+        "        # Gradient wrt Z3 when using sigmoid activation at output\n",
+        "        dZ3 = output - y[:, None]\n",
         "\n",
+        "        batch_scalar = 1 / m\n",
         "\n",
         "        # <Your code>\n",
-        "        # Gradients for the third layer (output layer)\n",
         "\n",
+        "        ### NOTES: \n",
+        "        # Multiplication order for W @ H is different from notes for forward pass\n",
+        "        # W(l) is transposed in del calculations\n",
+        "        # Everything is scaled by batch size\n",
+        "        # relu_derivative multiply is element wise!!\n",
+        "        \n",
+        "        # Gradients for the third layer (output layer)\n",
+        "        dW3 = np.dot(self.h2.T, dZ3)\n",
+        "        db3 = np.sum(dZ3, keepdims=True, axis=0)\n",
         "\n",
         "        # Gradients for the second hidden layer\n",
-        "\n",
+        "        del2 = np.dot(dZ3, self.w3.T) * relu_derivative(self.ht2)\n",
+        "        dW2 = np.dot(del2.T, self.h1).T\n",
+        "        db2 = np.sum(del2, keepdims=True, axis=0)\n",
         "\n",
         "        # Gradients for the first hidden layer\n",
-        "\n",
-        "\n",
+        "        del1 = np.dot(del2, self.w2.T) * relu_derivative(self.ht1)\n",
+        "        dW1 = np.dot(del1.T, X).T\n",
+        "        db1 = np.sum(del1, keepdims=True, axis=0)\n",
         "\n",
         "        # Update weights and biases using gradients\n",
-        "        \n",
-        "        \n",
-        "        \n",
-        "        \n",
-        "        \n",
+        "        self.w3 -= batch_scalar * self.learning_rate * dW3\n",
+        "        self.b3 -= batch_scalar * self.learning_rate * db3\n",
+        "        self.w2 -= batch_scalar * self.learning_rate * dW2\n",
+        "        self.b2 -= batch_scalar * self.learning_rate * db2\n",
+        "        self.w1 -= batch_scalar * self.learning_rate * dW1\n",
+        "        self.b1 -= batch_scalar * self.learning_rate * db1\n",
         "        # <end code>\n",
         "\n",
         "    def fit(self, X, y):\n",
@@ -540,8 +567,8 @@
         "\n",
         "            # Calculate and print loss for monitoring\n",
         "            if (epoch + 1) % 100 == 0:\n",
-        "              loss = binary_cross_entropy(y, self.forward(X))\n",
-        "              print(f\"Epoch {epoch + 1}/{self.epochs}, Loss: {loss:.4f}\")\n",
+        "                loss = binary_cross_entropy(y, self.forward(X))\n",
+        "                print(f\"Epoch {epoch + 1}/{self.epochs}, Loss: {loss:.4f}\")\n",
         "\n",
         "    def predict(self, X):\n",
         "        \"\"\"\n",
@@ -552,14 +579,14 @@
         "\n",
         "        # <Your code>\n",
         "        predictions = self.forward(X)\n",
-        "        return (predictions > 0.5).astype(int)  # Convert probabilities to binary predictions\n",
-        "        # <end code>\n",
-        "\n"
+        "        # Convert probabilities to binary predictions\n",
+        "        return (predictions > 0.5).astype(int)\n",
+        "        # <end code>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 624,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -567,16 +594,34 @@
         "id": "JnakwS_5LUOW",
         "outputId": "bcab27df-47a1-4095-99c8-423e77642631"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 0/1000, Loss: 0.8212\n",
+            "Epoch 100/1000, Loss: 0.7472\n",
+            "Epoch 200/1000, Loss: 0.7149\n",
+            "Epoch 300/1000, Loss: 0.7013\n",
+            "Epoch 400/1000, Loss: 0.6957\n",
+            "Epoch 500/1000, Loss: 0.6930\n",
+            "Epoch 600/1000, Loss: 0.6918\n",
+            "Epoch 700/1000, Loss: 0.6918\n",
+            "Epoch 800/1000, Loss: 0.6923\n",
+            "Epoch 900/1000, Loss: 0.6933\n",
+            "Epoch 1000/1000, Loss: 0.6948\n"
+          ]
+        }
+      ],
       "source": [
         "# You are encouraged to experiment with different architectures and learning rates to see how they affect the performance of the model.\n",
         "nn_network = NeuralNetwork(input_size=X_train.shape[1], hidden_size1=8, hidden_size2=4, output_size=1, learning_rate=0.0001, epochs=1000, batch_size=16)\n",
-        "nn_network.fit(X_train, y_train)\n"
+        "nn_network.fit(X_train, y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 625,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -584,7 +629,23 @@
         "id": "vjsW0iYKLUOW",
         "outputId": "edbfe2db-5d14-492e-d80e-1faea51da7a9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 0 0 1 1 0 0 1 0 1 1 0 1 1 1 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1\n",
+            " 1 0 1 1 0 1 1 1 1 1 1 1 1 0 0 1 0 1 1 1 0 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0\n",
+            " 1 1 1 1 1 1 0 1 0 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 1 0 0 1 0 0 1 1 1 0 1 1 0\n",
+            " 1 1 0]\n",
+            "[1 0 0 1 1 0 0 0 1 1 1 0 1 0 1 0 1 1 1 0 0 1 0 1 1 1 1 1 1 0 1 1 1 1 1 1 0\n",
+            " 1 0 1 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 0 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 0\n",
+            " 1 1 1 0 1 1 0 1 0 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 1 0 0 1 0 0 1 1 1 0 1 1 0\n",
+            " 1 1 0]\n",
+            "The accuracy is 0.9386\n"
+          ]
+        }
+      ],
       "source": [
         "# Code to check accuracy of your implementation\n",
         "predictions = nn_network.predict(X_test)\n",
@@ -616,7 +677,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.5"
     }
   },
   "nbformat": 4,
