Completion of HW6

--- a/hw6/Assignment_6_Exercise.ipynb
+++ b/hw6/Assignment_6_Exercise.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {
     "id": "qv-7l2XbFHtS"
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {
     "id": "6BPv6ZkFqGjw"
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {
     "id": "Go1jjZEvp651"
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {
     "id": "DAOjJ6xNMuzU"
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {
     "id": "ZLXBzMnGM3_D"
    },
@@ -336,10 +336,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x137d5ef60>"
+       "<matplotlib.legend.Legend at 0x1315a85f0>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {
     "id": "9LkSMQDIQfx6"
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {
     "id": "bwzeGMjESDm0"
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {
     "id": "s6PB5HZITC0H"
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {
     "id": "niZzgBdGQmQ-"
    },
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {
     "id": "hfWMHL533jbX"
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {
     "id": "WuYa_MJlQ2L1"
    },
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {
     "id": "Dbe1SuJ49qPg"
    },
